--- a/css/styles.css
+++ b/css/styles.css
@@ -10,23 +10,37 @@ html {
 
 body {
     font-family: 'Exo 2', sans-serif;
-    background-image: url(https://drive.google.com/uc?export=view&id=1EIRwdeLQQfljV8sSzIfXZSxKDPLqT6D-);
+    background-image: linear-gradient(rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ),url(https://drive.google.com/uc?export=view&id=1EIRwdeLQQfljV8sSzIfXZSxKDPLqT6D-);
     background-attachment:fixed;
     background-size: 100% 100%;
-
 }
 
 .main-section {
+    display: flex;
     height: 100vh;
     width: 100%;
     border: 2px solid blue;
 }
 
 .main-info {
+    display: flex;
     height: 8rem;
     width: 100%;
     border: 2px solid rgb(21, 172, 147);
-    background-color: blue;
-    
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
+#title {
+    font-size: 3rem;
+    color: white;
+    text-align: center;
+}
+
+#description {
+    font-size: 1.6rem;
+    color: white;
+    margin-top: 0.7rem;
+    text-align: center;
 }
