--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ html {
 body {
     font-family: 'Exo 2', sans-serif;
     background-image: linear-gradient(rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ),url(https://drive.google.com/uc?export=view&id=1EIRwdeLQQfljV8sSzIfXZSxKDPLqT6D-);
+    /*background-image: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%), url(https://drive.google.com/uc?export=view&id=1EIRwdeLQQfljV8sSzIfXZSxKDPLqT6D-);*/
     background-attachment:fixed;
     background-size: 100% 100%;
 }
@@ -20,6 +21,7 @@ body {
     height: 100vh;
     width: 100%;
     border: 2px solid blue;
+    flex-direction: column;
 }
 
 .main-info {
@@ -43,4 +45,8 @@ body {
     color: white;
     margin-top: 0.7rem;
     text-align: center;
+}
+
+.form-section {
+    border: 2px solid lightpink;
 }
