--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
     width: 100%;
     border: 2px solid blue;
     flex-direction: column;
+    align-items: center;
 }
 
 .main-info {
@@ -48,9 +49,15 @@ body {
 }
 
 .form-section {
+    display: flex;
+    justify-content: center;
+    background: linear-gradient(180deg, rgba(2,0,36,0.5) 0%, rgba(9,9,121,0.5) 35%, rgb(2, 27, 33) 100%);
+    width: 90%;
+    margin-top: 2.5rem;
     border: 2px solid lightpink;
 }
 
 .form-group {
+    margin: 5rem;
     border: 1px solid green;
 }
