--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@ html {
 
 body {
     font-family: 'Exo 2', sans-serif;
-    background-image: linear-gradient(rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ),url(https://drive.google.com/uc?export=view&id=1EIRwdeLQQfljV8sSzIfXZSxKDPLqT6D-);
-    /*background-image: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%), url(https://drive.google.com/uc?export=view&id=1EIRwdeLQQfljV8sSzIfXZSxKDPLqT6D-);*/
+    background: linear-gradient(rgba(58, 58, 158, 0.8), rgba(136, 136, 206, 0.7) ), url(https://drive.google.com/uc?export=view&id=1EIRwdeLQQfljV8sSzIfXZSxKDPLqT6D-);
     background-attachment:fixed;
     background-size: 100% 100%;
 }
